[package]
name = "mythic-rabbitmq"
version = "0.1.0"
edition = "2021"

[dependencies]
# AMQP 0-9-1 client (what RabbitMQ uses)
lapin = "2.3"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async utilities
futures-lite = "2.0"
# UUID for correlation IDs
uuid = { version = "1.0", features = ["v4"] }
# Logging
tracing = "0.1"
# Error handling
thiserror = "1.0"
