[package]
name = "mythic-rabbitmq"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-lite = "2.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
thiserror = "1.0"
dotenv = "0.15"
